PIP-292 Update java to 17 and tidy up warnings